--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -43,7 +43,8 @@
           </p>
         </section>
         <footer>
-          <button class="button-sedans" type="button">
+          <audio id="audioPlayer" src="1106630481862205621.mp3"></audio>
+          <button class="button-sedans" onclick="document.getElementById('audioPlayer').play()">
             <strong>Learn More</strong>
           </button>
         </footer>
@@ -67,7 +68,7 @@
           off-road adventures.
         </p>
         <footer>
-          <button class="button-suvs" type="button">
+          <button class="button-suvs" onclick="document.getElementById('audioPlayer').play()">
             <strong>Learn More</strong>
           </button>
         </footer>
@@ -91,7 +92,7 @@
            in style.
         </p>
         <footer>
-          <button class="button-luxury" type="button">
+          <button class="button-luxury" onclick="document.getElementById('audioPlayer').play()">
             <strong>Learn More</strong>
           </button>
         </footer>
